--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,9 @@
 	  <!-- link the webpage's stylesheet -->
 	  <link rel="stylesheet" href="style.css" />
 
+	  <!-- link the webpage's JavaScript file -->
+	  <script src="/script.js" defer></script>
+
 
     <style> 
     #rcorners1 {
