--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	  <link rel="stylesheet" href="style.css" />
 
 	  <!-- link the webpage's JavaScript file -->
-	  <script src="/script.js" defer></script>
+	  <script src="script.js" defer></script>
 
   </head>
 
