--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <li><a href="index.html"><img id = "home" src="assets/home.png" alt="home button"></a></li>
         <li><a href="portfolio.html"><img id = "portfolio" src="assets/portfolio.png" alt="portfolio button"></a></li>
         <li><a href="art.html"><img id = "art" src="assets/art.png" alt="art button"></a></li>
-      <linked> <li><a href="https://www.linkedin.com/in/ruimingxu"><img id = "linkedin" src="assets/linkedin.png" alt="linkedin button"></a></li> </linked>  
+      <linked> <li><a href="https://www.linkedin.com/in/ruimingxu"></a><img id = "linkedin" src="assets/linkedin.png" alt="linkedin button"></li> </linked>  
       
       </ul>
   </nav>
