--- a/art.html
+++ b/art.html
@@ -10,14 +10,15 @@
   </head>
   <body>
     <header>
-      <nav>
-        <ul>
-            <li><a href="index.html"><img id = "home" src="assets/home.png" alt="home button"></a></li>
-            <li><a href="portfolio.html"><img id = "portfolio" src="assets/portfolio.png" alt="portfolio button"></a></li>
-            <li><a href="art.html"><img id = "art" src="assets/art.png" alt="art button"></a></li>
-          <linked> <li><a href="www.linkedin.com/in/ruimingxu"></a><img id = "linkedin" src="assets/linkedin.png" alt="linkedin button"></li> </linked>
-          </ul>
-      </nav>
+   <nav>
+    <ul>
+        <li><a href="index.html"><img id = "home" src="assets/home.png" alt="home button"></a></li>
+        <li><a href="portfolio.html"><img id = "portfolio" src="assets/portfolio.png" alt="portfolio button"></a></li>
+        <li><a href="art.html"><img id = "art" src="assets/art.png" alt="art button"></a></li>
+      <linked> <li><a href="https://www.linkedin.com/in/ruimingxu"></a><img id = "linkedin" src="assets/linkedin.png" alt="linkedin button"></li> </linked>  
+      
+      </ul>
+  </nav>
     </header>
     <div class="arts">
       <div class= "arts-container">
