--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
     <p class = visualizations>
       <img id = "etsIMG" src="assets/visualization.png" alt="portfolio button">
       <p id="rcorners1">
-        placeholder. <a href="assets/testing.pbix" download> Download</a>
+        I created visualizations for evaluating and predicting the factors that maximize and negatively impact tourism based on this dataset: https://www.kaggle.com/datasets/ziya07/tourism-resource-management-dataset?resource=download <a href="assets/testing.pbix" download> Download</a>
       </p>
     </p>
     
