--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 
      <h2>My Resume</h2>
-     <embed class="pdf" src= "assets/Ruiming Xu_Resume 2024-2025.pdf" width="800" height="500">
+     <embed class="pdf" src= "assets/Ruiming Xu_Resume_2024-2025.pdf" width="800" height="500">
 
   </body>
 </html>
