--- a/art.html
+++ b/art.html
@@ -51,6 +51,21 @@
       <div class= "arts-container">
         <img src="assets/Agents.png" alt="">
       </div> 
+      <div class= "arts-container">
+        <img src="assets/flyer3.png" alt="">
+      </div> 
+      <div class= "arts-container">
+        <img src="assets/flyer1.png" alt="">
+      </div> 
+      <div class= "arts-container">
+        <img src="assets/flyer2.png" alt="">
+      </div> 
+      <div class= "arts-container">
+        <img src="assets/creatures2.png" alt="">
+      </div> 
+      <div class= "arts-container">
+        <img src="assets/logo.jpg" alt="">
+      </div> 
 
     </div>
 
