--- a/index.html
+++ b/index.html
@@ -63,15 +63,10 @@
       <h1 class="nameTitle"><img id="name" src="assets/name.png" alt="hello! i'm Ruiming!" class="center"></h1>
 
       <p class = "homeIntro" id="rcorners1">
-        Hello! I am Ruiming Xu and I am a second year at Purdue University majoring in Data Analytics, Technology, and Applications. I have experience in visualizations using PowerBI and Tableau, data cleaning and modeling, working in an Agile environment, as well as utilizing Python, Java, HTML, and CSS. I am also a design chair in the Society of Asian Scientists and Engineers (SASE), and you can check out some of my work @sasepurdue on Instagram! I am open to any internships and research as I am always on the lookout for new learning experiences!
+        Hello! I am Ruiming Xu and I am a second year at Purdue University majoring in Data Analytics, Technology, and Applications. I have experience in visualizations using PowerBI and Tableau, data cleaning and modeling, working in an Agile environment, as well as utilizing Python, Java, HTML, and CSS. I am also a marketing director in the Society of Asian Scientists and Engineers. I am open to any internships and research as I am always on the lookout for new learning experiences!
       </p>
 
     </header>
-
-
-
-     <h2>My Resume</h2>
-     <embed class="pdf" src= "assets/Ruiming Xu_Resume_2024-2025.pdf" width="800" height="500">
 
   </body>
 </html>
