--- a/art.html
+++ b/art.html
@@ -32,6 +32,9 @@
         <img src="assets/flyer2.png" alt="">
       </div> 
       <div class= "arts-container">
+        <img src="assets/flyer4.png" alt="">
+      </div> 
+      <div class= "arts-container">
         <img src="assets/them!.png" alt="A drawing of 4 characters">
       </div> 
       <div class= "arts-container">
